// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extractTypeDefinitionFromFunctionSql should be able to extract types in this example 1`] = `
TypeDefinitionOfResourceFunction {
  "inputs": Array [
    TypeDefinitionOfResourceInput {
      "name": "in_url",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_caption",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_credit",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_alt_text",
      "type": Array [
        "string",
        "null",
      ],
    },
  ],
  "name": "upsert_image",
  "output": Array [
    "number",
  ],
}
`;

exports[`extractTypeDefinitionFromFunctionSql should be able to extract types in this other example 1`] = `
TypeDefinitionOfResourceFunction {
  "inputs": Array [
    TypeDefinitionOfResourceInput {
      "name": "in_suggestion_source",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_external_id",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_suggested_idea_id",
      "type": Array [
        "number",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_status",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_result",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_resultant_curated_idea_id",
      "type": Array [
        "number",
        "null",
      ],
    },
  ],
  "name": "upsert_suggestion",
  "output": Array [
    "number",
  ],
}
`;

exports[`extractTypeDefinitionFromFunctionSql should be able to extract types in this other other example 1`] = `
TypeDefinitionOfResourceFunction {
  "inputs": Array [
    TypeDefinitionOfResourceInput {
      "name": "in_array",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_delimiter",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_index",
      "type": Array [
        "number",
        "null",
      ],
    },
  ],
  "name": "hash_string",
  "output": Array [
    "string",
  ],
}
`;
